--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         try {
           await navigator
                 .serviceWorker
-                .register('serviceworker.js');
+                .register('/serviceworker.js');
         }
         catch (e) {
           console.log('SW registration failed');
