Fixed ServiceWorker not loading due to async functions

--- a/index.html
+++ b/index.html
@@ -38,23 +38,16 @@
 
 
 <script>
-    window.addEventListener('load', () => {
-      registerSW();
+     if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('./serviceworker.js')
+    .then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }).catch(function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
     });
- 
-    // Register the Service Worker
-    async function registerSW() {
-      if ('serviceWorker' in navigator) {
-        try {
-          await navigator
-                .serviceWorker
-                .register('/serviceworker.js');
-        }
-        catch (e) {
-          console.log('SW registration failed');
-        }
-      }
-    }
+}
  </script>
 </body>
 </html>
